syntax = "nbt";
package minecpp.message.nbt;

message ArmorItem {
}

message Attribute {
  double base = 1 [label = "Base"];
  string name = 2 [label = "Name"];
}

message Memories {
}

message Brain {
  Memories memories = 1;
}

message HandItem {
}

message Entity {
  float absorption_amount = 1 [label = "AbsorptionAmount"];
  int16 air = 2 [label = "Air"];
  repeated float armor_drop_chances = 3 [label = "ArmorDropChances"];
  repeated ArmorItem armor_items = 4 [label = "ArmorItems"];
  repeated Attribute attributes = 5 [label = "Attributes"];
  Brain brain = 6 [label = "Brain"];
  int8 can_pick_up_loot = 7 [label = "CanPickUpLoot"];
  int16 death_time = 8 [label = "DeathTime"];
  int8 explosion_radius = 9 [label = "ExplosionRadius"];
  float fall_distance = 10 [label = "FallDistance"];
  int8 fall_flying = 11 [label = "FallFlying"];
  int16 fire = 12 [label = "Fire"];
  int16 fuse = 13 [label = "Fuse"];
  repeated float hand_drop_chances = 14 [label = "HandDropChances"];
  repeated HandItem hand_items = 15 [label = "HandItems"];
  float health = 16 [label = "Health"];
  int32 hurt_by_timestamp = 17 [label = "HurtByTimestamp"];
  int16 hurt_time = 18 [label = "HurtTime"];
  int8 invulnerable = 19 [label = "Invulnerable"];
  int8 left_handed = 20 [label = "LeftHanded"];
  repeated double motion = 21 [label = "Motion"];
  int8 on_ground = 22 [label = "OnGround"];
  int8 persistence_required = 23 [label = "PersistenceRequired"];
  int32 portal_cooldown = 24 [label = "PortalCooldown"];
  repeated double pos = 25 [label = "Pos"];
  repeated float rotation = 26 [label = "Rotation"];
  ints uuid = 27 [label = "UUID"];
  string id = 28;
  int8 ignited = 29;
}

message Heightmaps {
  longs motion_blocking = 1 [label = "MOTION_BLOCKING"];
  longs motion_blocking_no_leaves = 2 [label = "MOTION_BLOCKING_NO_LEAVES"];
  longs ocean_floor = 3 [label = "OCEAN_FLOOR"];
  longs ocean_floor_wg = 4 [label = "OCEAN_FLOOR_WG"];
  longs world_surface = 5 [label = "WORLD_SURFACE"];
  longs world_surface_wg = 5 [label = "WORLD_SURFACE_WG"];
}

message PaletteItem {
  string name = 1 [label = "Name"];
  compound properties = 2 [label = "Properties"];
}

message Section {
  int8 y = 1 [label = "Y"];
  bytes block_light = 2 [label = "BlockLight"];
  bytes sky_light = 3 [label = "SkyLight"];
  longs block_states = 4 [label = "BlockStates"];
  repeated PaletteItem palette = 5 [label = "Palette"];
}

message Start {
  string id = 1;
}

message Structures {
  map<string, Start> starts = 1 [label = "Starts"];
}

message CarvingMasks {
    bytes air = 1 [label = "AIR"];
    bytes liquid = 2 [label = "LIQUID"];
}

message Level {
  ints biomes = 1 [label = "Biomes"];
  CarvingMasks carving_masks = 2 [label = "CarvingMasks"];
  repeated Entity entities = 3 [label = "Entities"];
  Heightmaps heightmaps = 4 [label = "Heightmaps"];
  int64 last_update = 5 [label = "LastUpdate"];
  repeated repeated int16 lights = 6 [label = "Lights"];
  int64 inhabited_time = 7 [label = "InhabitedTime"];
  repeated repeated int16 post_processing = 8 [label = "PostProcessing"];
  repeated Section sections = 9 [label = "Sections"];
  string status = 10 [label = "Status"];
  Structures structures = 11 [label = "Structures"];
  /* repeated <unknown> tile_entities = 11 [label = "TileEntities"]; */
  /* repeated <unknown> tile_ticks = 11 [label = "TileTicks"]; */
  int8 is_light_on = 14 [label = "isLightOn"];
  int32 x_pos = 15 [label = "xPos"];
  int32 z_pos = 16 [label = "zPos"];
}

message Chunk {
  int32 version = 1 [label = "DataVersion"];
  Level level = 2 [label = "Level"];
}
